# music-downloader

./: .gitignore  README.md  convert_tracks_to_mp3.py  create_db_from_directory.py  create_db_with_youtube_ids.py  download_tracks.py  pyproject.toml  requirements.txt  run.sh
src/: csv_handling.py  data_handling.py  file_handling.py  file_metadata.py  youtube_download.py  youtube_id_search.py  youtube_search.py
