[tool.poetry]
name = "music-download"
version = "0.1.0"
description = ""
authors = ["Miguel Condesso <mcondesso@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mutagen = "1.45.1"
pytube = "15.0.0"
youtube-search = "2.1.2"
tqdm = "4.66.1"
pandas = "2.1.4"
moviepy = "1.0.3"


[tool.poetry.group.dev.dependencies]
black = "23.12.0"
ipdb = "0.13.13"
isort = "5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
